2012-08-09  Dirk Eddelbuettel  <edd@debian.org>

	* Applied two more patches by Murray:
	  - R/wrapper_FielDescriptor.R: correct more '_' and '__' mismatches 
	  - man/*: update manual pages for style, add examples
	  - src/mutators.cpp: add tests for NA in boolean vectors
	  - inst/unitTests/runit.golden.message.R: add unit test

2012-08-08  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION: Release 0.2.5

	* src/mutators.cpp: Applied patch by Murray to correctly deal with
	nested protocol buffer definitions
	* inst/unitTests/runit.nested.R: Added test from Murray
	* inst/unitTests/data/nested.proto: Nested protbuf def from Murray

	* R/serialize.R: Added patch by Murray to not serialize uninitalized
	protocol buffers (with missing required fields)
	* inst/unitTests/runit.serialize.R: Added tests for this

	* /man/add.Rd: Add patch by Murray for stylistic improvement and
	added examples
	
	* inst/NEWS.Rd: Converted NEWS file to .Rd format

	* DESCRIPTION: Changed Maintainer: to single person per CRAN Policy

	* vignettes/: Moved from inst/doc/ per CRAN Policy

2012-05-15  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION: Release 0.2.4

	* R/zzz.R (.onLoad): pass lib.loc=libname to readProtoFiles
	* R/internals.R (readProtoFiles): use lib.loc argument
	* man/readProtoFiles.Rd: Document new lib.loc argument

2012-05-14  Dirk Eddelbuettel  <edd@debian.org>

	* R/lookup.R: comment-out unlockBinding() which R CMD check does not
	like as it turns out that we do not need it here anyway

	* inst/unitTests/runit.addressbook.R (test.ascii): Small correction
	by converting to character before comparing

	* DESCRIPTION: Remove Depends: on int64 which is no longer used,
	lower Depends: on Rcpp to 0.9.6 which should be sufficient

2012-05-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/rprotobuf.h: Added '#include <unistd.h>' to make g++-4.7 happy

	* src/*: Reversed out SVN revisions 426 to 434 related to int64

2012-04-07  Dirk Eddelbuettel  <edd@debian.org>
