@@ -9,4 +9,8 @@ Indicates if a field descriptor is an extension
 The method is implemented for the \linkS4class{FieldDescriptor} class
 }
 \keyword{methods}
-
+\examples{
+proto.file <- system.file( "proto", "addressbook.proto", package = "RProtoBuf" )
+Person <- P( "tutorial.Person", file = proto.file )
+is_extension(Person$id)
+}
