@@ -1,7 +1,17 @@
+2012-08-18  Dirk Eddelbuettel  <edd@debian.org>
+
+	* Applied two more patches by Murray and Karl:
+	  - Make readASCII() more robust to error conditions; adds tests to
+	    catch them.
+	  - Correct type(), cpp_type(), and label() methods when
+	    as.string=TRUE; add unit tests for these methods, add examples to
+	    the Rd files for these methods, and adds type and cpp_type to the
+	    NAMESPACE file where they were previously absent.
+
 2012-08-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* Applied two more patches by Murray:
-	  - R/wrapper_FielDescriptor.R: correct more '_' and '__' mismatches 
+	  - R/wrapper_FielDescriptor.R: correct more '_' and '__' mismatches
 	  - man/*: update manual pages for style, add examples
 	  - src/mutators.cpp: add tests for NA in boolean vectors
 	  - inst/unitTests/runit.golden.message.R: add unit test
@@ -21,7 +31,7 @@
 
 	* /man/add.Rd: Add patch by Murray for stylistic improvement and
 	added examples
-	
+
 	* inst/NEWS.Rd: Converted NEWS file to .Rd format
 
 	* DESCRIPTION: Changed Maintainer: to single person per CRAN Policy
